--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ body {
   position: relative;
   z-index: 2;
   padding: 140px 0 100px;
-  background: url("./imgages/earth-text.png") 100% no-repeat;
+  background: url("../imgages/earth-text.png") 100% no-repeat;
 }
 .text::after {
   content: "";
